Improving alignment. Fixing rounded corners on dropdown when only one is present. Addresses #841

--- a/web-server/css/slycat.css
+++ b/web-server/css/slycat.css
@@ -592,3 +592,8 @@ label.bottom-margin
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
+/*.bootstrap-styles .btn-group > .btn-group:only-child > .btn {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}*/
